chat/getAll endpoint added, an error due to missing statuscode on ChatService resolved.
01/10/2024
