# docs/swagger_output.json
@@ -93,6 +93,19 @@
         }
       }
     },
+    "/chat/getAll": {
+      "get": {
+        "tags": [
+          "Chat"
+        ],
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/clubEvent/create": {
       "post": {
         "description": "",
